<?xml version="1.0" encoding="utf-8"?>
<!-- http://developer.android.com/resources/samples/ApiDemos/res/xml/preferences.html -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	
     <EditTextPreference
         android:key="eva_key"
         android:summary=""
         android:title="Eva API Key"
      	/>
     <EditTextPreference
         android:key="eva_site_code"
         android:summary=""
         android:title="Site Code"
      	/>    
      	
      	 <EditTextPreference
            android:key="eva_vproxy_host"
            android:summary="Leave blank for default"
            android:title="VProxy Host"
         	/>
        
        <EditTextPreference
            android:key="eva_webservice_host"
            android:summary="Leave blank for default"
            android:title="EVA WS Host"
         	/>
        
        <EditTextPreference
            android:key="eva_api_ver_host"
            android:summary="Leave blank for default"
            android:title="API Version"
         	/>
        
        <EditTextPreference
            android:key="eva_language"
            android:summary="Leave blank for 'en'"
            android:title="Language"
         	/>
        
        <EditTextPreference
            android:key="eva_locale"
            android:summary="Leave blank for 'US'"
            android:title="Locale"
         	/>
        
        <ListPreference 
            android:key="eva_vr_service"
            android:title="Preferred Voice Recognition service"
            android:summary=""
            android:entries="@array/entries_vr_service"
            android:entryValues="@array/entryvalues_vr_service"
            />
        
        <CheckBoxPreference 
            android:key="eva_voice_only"
            android:title="Voice Only"
            android:summary="Debug only speech recognition"
            />
        
        <CheckBoxPreference
            android:key="eva_save_pcm"
            android:summary="@string/save_recording_pcm_file_wav_"
            android:title="Save PCM" />
        <CheckBoxPreference
            android:key="eva_save_encoded"
            android:summary="@string/save_encoded_file_flac_"
            android:title="@string/save_encoded" />

        <PreferenceCategory android:title="VAD - Voice Activity Detection"
            >
            <EditTextPreference 
				android:numeric="integer"
				android:title="pre-VAD recording time"
				android:summary="Time at the begining of the recording where the VAD isn't considered"
				android:key="eva_pre_vad"
                />
            
            <EditTextPreference 
				android:numeric="integer"
				android:title="Silence Period"
				android:summary="Minimum continuous silent time to be considered 'Silence'"
				android:key="eva_silence_period"
                />
            
            <EditTextPreference 
				android:numeric="integer"
				android:title="Noise Period"
				android:summary="Minimum continuous noisy time to be considered 'Noise'"
				android:key="eva_noise_period"
                />
            
            <EditTextPreference 
				android:numeric="integer"
				android:title="Moving Average Window"
				android:summary="Number of recent recorder chunks to average when considering current volume level"
				android:key="eva_moving_average_window"
                />
            
        </PreferenceCategory>
        
        
     <PreferenceScreen android:title="Context"
		android:summary="Travel services to consider in parsing"
     >
         <CheckBoxPreference android:key="eva_context_flights"  android:title="Flights" />
         <CheckBoxPreference android:key="eva_context_hotels"   android:title="Hotels" />
         <CheckBoxPreference android:key="eva_context_vacation" android:title="Vacation Packages" />
         <CheckBoxPreference android:key="eva_context_car"      android:title="Car Rental" />
         <CheckBoxPreference android:key="eva_context_cruise"   android:title="Cruise" />
         <CheckBoxPreference android:key="eva_context_ski"      android:title="Ski" />
         <CheckBoxPreference android:key="eva_context_explore"  android:title="Explore" />
     </PreferenceScreen>

</PreferenceScreen>